# Jarvis-Assistant

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  GEMINI.md  Observations.md  PLAN-ENHANCED.md  PLAN.md  README.md  Restructuring.md  demo_error_handling.py  docker-compose.yaml  pyproject.toml  test_dataset_generator_areas.py  test_enhanced_logging.py  test_generation_summary.py
.claude/agents/: architecture-agent.md  design-agent.md  developer-agent.md
.claude/commands/: architecture-consult.md  architecture-review.md  context.md  design.md  develop.md
.kiro/hooks/: docs-architecture-optimizer.kiro.hook  documentation-sync.kiro.hook  impact-analyzer.kiro.hook  mcp-tool-validator.kiro.hook  service-integration-guardian.kiro.hook  test-stub-generator.kiro.hook
.kiro/specs/: README.md  planning-methodology.md
.kiro/specs/architecture-refactor/: design.md  requirements.md  tasks.md
.kiro/specs/database-initialization-fix/: design.md  requirements.md  tasks.md
.kiro/specs/documentation-enhancement/: design.md  requirements.md  tasks.md
.kiro/specs/enhanced-search-context/: design.md  requirements.md  tasks.md
.kiro/specs/graphrag-mvp/: design.md  requirements.md  tasks.md
.kiro/specs/quality-assessment-agents/: design.md  requirements.md  tasks.md
.kiro/specs/structured-data-enhancement/: design.md  requirements.md  tasks.md
.kiro/specs/vault-analytics-engine/: design.md  requirements.md  tasks.md
.kiro/steering/: common-patterns.md  data-modeling.md  debugging.md  mcp-standards.md  performance.md  product.md  quick-start.md  security.md  structure.md  tech.md  testing.md
ai-docs/: analysis.md  mcp-tools.md  overview.md
ai-docs/guidelines/: architectural-guidelines.md  coding-standards.md
config/: .env.example  base.yaml  local.yaml
docs/: README.md
docs/01-overview/: architectural-roadmap.md  architecture.md  current-capabilities.md  key-concepts.md  project-overview.md  vision-and-goals.md
docs/02-architecture/: README.md  architecture-decisions.md  architecture-documentation-review.md  architecture-improvement-recommendations.md  architecture-roadmap.md  architecture.md  component-interaction.md  data-flow.md  dependency-injection-implementation.md  deployment-patterns.md  documentation-review-process.md  error-handling-architecture.md  implementation-status.md  mcp-implementation-details.md  service-startup-sequence.md  system-overview.md
docs/02-system-design/: README.md  architecture-decisions.md  architecture-documentation-review.md  architecture-improvement-recommendations.md  architecture.md  component-interaction.md  data-flow.md  database-initialization-architecture.md  dependency-injection-implementation.md  extension-architecture.md  implementation-status.md  mcp-implementation-details.md  neo4j-schema.md  performance-characteristics.md  semantic-search-design.md  service-startup-sequence.md  system-overview.md
docs/03-getting-started/: configuration.md  detailed-installation.md  first-queries.md  quick-start.md  user-config.md
docs/04-usage/: EXTRA.md  advanced-queries.md  api-examples.md  common-workflows.md  graph-database-setup.md
docs/05-development/: code-standards.md  contribution-guide.md  developer-guide.md  extension-development.md  plugin-schema-checklist.md  testing-strategy.md
docs/06-reference/: api-reference.md  configuration-reference.md  error-codes.md
docs/07-maintenance/: EXTRA.md  performance-tuning.md  troubleshooting.md
docs/08-progression/: README.md  architectural-evolution.md  current-phase.md  lessons-learned.md  milestone-log.md  version-history.md
docs/09-adr/: 0001-di-in-mcp-server.md  0002-structured-responses-module.md  README.md
docs/10-api/: README.md
docs/api/: dataset-generation-api.md
docs/architecture/: arc42.md  architecture-map.md
docs/troubleshooting/: dataset-generation-troubleshooting.md
docs/usage/: dataset-generation-guide.md  dataset-generation-migration-guide.md
resources/: __init__.py
resources/config/: .env.example
resources/debug/: README.md  debug_mcp.py  debug_pairs_issue.py  demo_error_handling.py  mcp_debugging_process.md  mcp_wrapper.py  pairs_dataset_generator_fix.py  testing_commands.sh
resources/images/: high-level-architecture.drawio
resources/neo4j/: schema.cypher
resources/sample_vault/Areas/: Modal Analysis.md  Stability Analysis.md  State Vector.md  System Matrices.md  Transfer Functions.md
resources/sample_vault/Projects/: Wallpaper-Generator Project.md
resources/scripts/: README.md  check-documentation-alignment.py  dataset_tool_cleanup.py  dataset_tool_deployment.py  setup.py  verify_dataset_tool.py
resources/tests/: __init__.py  conftest.py  test_plugin_schemas.py
resources/tests/dataset-generation/: test_areas_dataset_generation.py  test_content_analyzer.py  test_enhanced_dataset_generation.py  test_enhanced_features_integration.py  test_error_handling_focused.py  test_error_handling_simple.py  test_feature_engineer.py  test_topic_modeler.py
resources/tests/helpers/: __init__.py  container.py
resources/tests/integration/: test_areas_dataset_generation.py  test_areas_filtering_default_behavior.py  test_cli_graph_index.py  test_database_migration.py  test_dataset_generation_end_to_end.py  test_dataset_generation_integration.py  test_dataset_generation_performance.py  test_dataset_generation_real_data.py  test_dataset_generation_service_integration.py  test_dataset_output_validation.py  test_dependency_injection_integration.py  test_plugin_integration.py
resources/tests/mcp/: manual_test_fallback.py  test_combined_search_debug.py  test_mcp_integration.py
resources/tests/unit/: test_areas_content_filter.py  test_container_and_events.py  test_container_context.py  test_content_analysis.py  test_database_error_handling.py  test_database_factory.py  test_database_initializer.py  test_enhanced_graph_analyzer.py  (+18 more)
scripts/: check-documentation-alignment.sh
src/: __init__.py
src/jarvis/: __init__.py  main.py
(+167 files in other folders)
